RESOLVED FIXED194023
Regression(PSON) History navigations to twitter.com lead to a 403 HTTP error
https://bugs.webkit.org/show_bug.cgi?id=194023
Summary Regression(PSON) History navigations to twitter.com lead to a 403 HTTP error
Chris Dumez
Reported 2019-01-30 09:04:42 PST
History navigations to twitter.com lead to a 403 HTTP error when PSON is enabled.
Attachments
Patch (10.17 KB, patch)
2019-01-30 09:33 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-01-30 09:04:59 PST
Chris Dumez
Comment 2 2019-01-30 09:33:51 PST
Geoffrey Garen
Comment 3 2019-01-30 17:14:52 PST
Comment on attachment 360588 [details] Patch r=me
WebKit Commit Bot
Comment 4 2019-01-30 18:24:01 PST
Comment on attachment 360588 [details] Patch Clearing flags on attachment: 360588 Committed r240750: <https://trac.webkit.org/changeset/240750>
WebKit Commit Bot
Comment 5 2019-01-30 18:24:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.